szolgaltatasok.html szoveg1

--- a/html/szolgaltatasok.html
+++ b/html/szolgaltatasok.html
@@ -1,46 +1,41 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <title>Szolgáltatásaink</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Szolgáltatások</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Saját CSS -->
-    <link rel="stylesheet" href="css/szolgaltatasok.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/szolgaltatasok.css">
 </head>
+
 <body>
 
-<header>
-    <a href="szakmai.html">Szakmai</a>
-    <a href="szolgaltatasok.html">Szolgáltatások</a>
-</header>
+<main class="py-5">
+  <div class="container col-lg-9 col-xl-8">
 
-<div class="main">
-
-    <section>
-        <h1>Szolgáltatásaink</h1>
-        <p>Egyszerű és átlátható webes megoldásokat kínálunk.</p>
+    <section class="service-card">
+      <h1>Szolgáltatásaink</h1>
+      <p>Egyszerű, modern webes megoldásokat kínálunk.</p>
     </section>
 
-    <section>
-        <h2>Céges weboldal</h2>
-        <p>Bemutatkozó weboldal több aloldallal, reszponzív kialakítással.</p>
+    <section class="service-card">
+      <h2>Bemutatkozó weboldal</h2>
+      <p>Egyszerű céges weboldal reszponzív megjelenéssel.</p>
     </section>
 
-    <section>
-        <h2>Landing page</h2>
-        <p>Egyoldalas weboldal kampányokhoz és ajánlatkéréshez.</p>
+    <section class="service-card">
+      <h2>Landing page</h2>
+      <p>Egyoldalas weboldal kampányokhoz.</p>
     </section>
 
-    <section>
-        <h2>Webshop alap</h2>
-        <p>Egyszerű webshop induló vállalkozások számára.</p>
+    <section class="service-card">
+      <h2>Webshop alap</h2>
+      <p>Kezdő webshop megoldás kisvállalkozásoknak.</p>
     </section>
 
-</div>
+  </div>
+</main>
 
 </body>
 </html>
