--- a/html/index.html
+++ b/html/index.html
@@ -7,12 +7,27 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
      <link rel="stylesheet" href="../css/Index.css">
 </head>
-<body>
- <nav class="navbar bg-body-tertiary">
+<nav class="navbar custom-navbar">
   <div class="container-fluid">
+
     <a class="navbar-brand" href="index.html">
-      <img id="logo" src="../Képek/P.png" alt="Bootstrap" width="100" height="50">
+      <img src="../Képek/P.png" alt="Logo" width="100" height="50">
     </a>
+
+    <ul class="nav-links">
+      <li class="dropdown">
+        <a href="#">Menü ▾</a>
+        <ul class="dropdown-list">
+          <li><a href="index.html">Főoldal</a></li>
+          <li><a href="szamiawebdesign.html">felhasználó élmény</a></li>
+          <li><a href="gyik.html">GY.I.K</a></li>
+          <li><a href="#">Galéria</a></li>
+          <li><a href="#">Kapcsolat</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+      </li>
+    </ul>
+
   </div>
 </nav>
 <div class="Kepesoldal">
