--- a/html/szakmai.html
+++ b/html/szakmai.html
@@ -10,6 +10,29 @@
 </head>
 
 <body>
+<nav class="navbar custom-navbar">
+  <div class="container-fluid">
+
+    <a class="navbar-brand" href="index.html">
+      <img src="../Képek/P.png" alt="Logo" width="100" height="50">
+    </a>
+
+    <ul class="nav-links">
+      <li class="dropdown">
+        <a href="#">Menü ▾</a>
+        <ul class="dropdown-list">
+          <li><a href="index.html">Főoldal</a></li>
+          <li><a href="szamiawebdesign.html">felhasználó élmény</a></li>
+          <li><a href="gyik.html">GY.I.K</a></li>
+          <li><a href="#">Galéria</a></li>
+          <li><a href="#">Kapcsolat</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+      </li>
+    </ul>
+
+  </div>
+</nav>
 
 <header class="py-3">
   <div class="container">
