--- a/html/gyik.html
+++ b/html/gyik.html
@@ -30,8 +30,8 @@
           <li><a href="index.html">Főoldal</a></li>
           <li><a href="szamiawebdesign.html">felhasználó élmény</a></li>
           <li><a href="gyik.html">GY.I.K</a></li>
-          <li><a href="#">Galéria</a></li>
-          <li><a href="#">Kapcsolat</a></li>
+          <li><a href="szakmaialapfogalmak.html">Szakmai alapok</a></li>
+          <li><a href="szolgaltatasok.html">Szolgáltatások</a></li>
           <li><a href="#">Blog</a></li>
         </ul>
       </li>
