--- a/html/szamiawebdesign.html
+++ b/html/szamiawebdesign.html
@@ -27,8 +27,8 @@
           <li><a href="index.html">Főoldal</a></li>
           <li><a href="szamiawebdesign.html">felhasználó élmény</a></li>
           <li><a href="gyik.html">GY.I.K</a></li>
-          <li><a href="#">Galéria</a></li>
-          <li><a href="#">Kapcsolat</a></li>
+          <li><a href="szakmaialapfogalmak.html">Szakmai alapok</a></li>
+          <li><a href="szolgaltatasok.html">Szolgáltatások</a></li>
           <li><a href="#">Blog</a></li>
         </ul>
       </li>
@@ -36,7 +36,6 @@
 
   </div>
 </nav>
-
 <header class="py-5">
   <div class="container col-lg-9 col-xl-8">
     <div class="content-card">
