--- a/html/szolgaltatasok.html
+++ b/html/szolgaltatasok.html
@@ -24,8 +24,8 @@
           <li><a href="index.html">Főoldal</a></li>
           <li><a href="szamiawebdesign.html">felhasználó élmény</a></li>
           <li><a href="gyik.html">GY.I.K</a></li>
-          <li><a href="#">Galéria</a></li>
-          <li><a href="#">Kapcsolat</a></li>
+          <li><a href="szakmaialapfogalmak.html">Szakmai alapok</a></li>
+          <li><a href="szolgaltatasok.html">Szolgáltatások</a></li>
           <li><a href="#">Blog</a></li>
         </ul>
       </li>
@@ -33,6 +33,7 @@
 
   </div>
 </nav>
+
 
 <main class="py-5">
   <div class="container col-lg-9 col-xl-8">
