--- a/html/szamiawebdesign.html
+++ b/html/szamiawebdesign.html
@@ -4,11 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Webdesign és felhasználói élmény (UX/UI)</title>
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
         crossorigin="anonymous">
-
   <link rel="stylesheet" href="../css/szakmaiwebdesign.css">
 </head>
 
@@ -24,12 +22,12 @@
       <li class="dropdown">
         <a href="#">Menü ▾</a>
         <ul class="dropdown-list">
-          <li><a href="index.html">Főoldal</a></li>
-          <li><a href="szamiawebdesign.html">felhasználó élmény</a></li>
-          <li><a href="gyik.html">GY.I.K</a></li>
-          <li><a href="szakmaialapfogalmak.html">Szakmai alapok</a></li>
-          <li><a href="szolgaltatasok.html">Szolgáltatások</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a id="menu1" href="szamiawebdesign.html">felhasználó élmény</a></li>
+          <li><a id="menu1" href="gyik.html">GY.I.K</a></li>
+          <li><a id="menu1" href="szakmaialapfogalmak.html">Szakmai alapok</a></li>
+          <li><a id="menu1" href="szolgaltatasok.html">Szolgáltatások</a></li>
+          <li><a id="menu1" href="webnyelv.html">webnyelv</a></li>
+          <li><a id="menu1" href="kapcsolat.html">Kapcsolat</a></li>
         </ul>
       </li>
     </ul>
