--- a/html/webnyelv.html
+++ b/html/webnyelv.html
@@ -2,8 +2,8 @@
 <html lang="hu">
 <head>
   <meta charset="UTF-8">
-  <title>Webszerkesztési nyelvek és technológiák</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>webnyelv</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/webnyelv.css">
 
@@ -20,12 +20,12 @@
       <li class="dropdown">
         <a href="#">Menü ▾</a>
         <ul class="dropdown-list">
-          <li><a href="index.html">Főoldal</a></li>
           <li><a href="szamiawebdesign.html">felhasználó élmény</a></li>
           <li><a href="gyik.html">GY.I.K</a></li>
           <li><a href="szakmaialapfogalmak.html">Szakmai alapok</a></li>
           <li><a href="szolgaltatasok.html">Szolgáltatások</a></li>
           <li><a href="webnyelv.html">webnyelv</a></li>
+          <li><a href="kapcsolat.html">Kapcsolat</a></li>
         </ul>
       </li>
     </ul>
