--- a/html/gyik.html
+++ b/html/gyik.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GY.I.K. – PixelPajzs Web Studio</title>
-
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-    crossorigin="anonymous"
-  />
-
-  <link rel="stylesheet" href="../css/gyik.css" />
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/gyik.css">
 </head>
-
 <body>
 <nav class="navbar custom-navbar">
   <div class="container-fluid">
@@ -27,12 +23,12 @@
       <li class="dropdown">
         <a href="#">Menü ▾</a>
         <ul class="dropdown-list">
-          <li><a href="index.html">Főoldal</a></li>
           <li><a href="szamiawebdesign.html">felhasználó élmény</a></li>
           <li><a href="gyik.html">GY.I.K</a></li>
           <li><a href="szakmaialapfogalmak.html">Szakmai alapok</a></li>
           <li><a href="szolgaltatasok.html">Szolgáltatások</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a href="webnyelv.html">webnyelv</a></li>
+          <li><a href="kapcsolat.html">Kapcsolat</a></li>
         </ul>
       </li>
     </ul>
