--- a/html/index.html
+++ b/html/index.html
@@ -18,12 +18,12 @@
       <li class="dropdown">
         <a href="#">Menü ▾</a>
         <ul class="dropdown-list">
-          <li><a href="index.html">Főoldal</a></li>
           <li><a href="szamiawebdesign.html">felhasználó élmény</a></li>
           <li><a href="gyik.html">GY.I.K</a></li>
           <li><a href="szakmaialapfogalmak.html">Szakmai alapok</a></li>
           <li><a href="szolgaltatasok.html">Szolgáltatások</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a href="webnyelv.html">webnyelv</a></li>
+          <li><a href="kapcsolat.html">Kapcsolat</a></li>
         </ul>
       </li>
     </ul>
