--- a/html/szamiawebdesign.html
+++ b/html/szamiawebdesign.html
@@ -22,12 +22,12 @@
       <li class="dropdown">
         <a href="#">Menü ▾</a>
         <ul class="dropdown-list">
-          <li id="menu1"><a  href="szamiawebdesign.html">felhasználó élmény</a></li>
-          <li id="menu1"><a  href="gyik.html">GY.I.K</a></li>
-          <li id="menu1"><a  href="szakmaialapfogalmak.html">Szakmai alapok</a></li>
-          <li id="menu1"><a  href="szolgaltatasok.html">Szolgáltatások</a></li>
-          <li id="menu1"><a  href="webnyelv.html">webnyelv</a></li>
-          <li id="menu1"><a  href="kapcsolat.html">Kapcsolat</a></li>
+          <li><a  href="szamiawebdesign.html">felhasználó élmény</a></li>
+          <li><a  href="gyik.html">GY.I.K</a></li>
+          <li><a  href="szakmaialapfogalmak.html">Szakmai alapok</a></li>
+          <li><a  href="szolgaltatasok.html">Szolgáltatások</a></li>
+          <li><a  href="webnyelv.html">webnyelv</a></li>
+          <li><a  href="kapcsolat.html">Kapcsolat</a></li>
       </li>
     </ul>
 
