--- a/html/Kapcsolat.html
+++ b/html/Kapcsolat.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <title>Kapcsolat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+<link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="/css/kapcsolat.css">
 </head>
 
@@ -48,7 +51,6 @@
 <main class="pb-5">
   <div class="container col-lg-9 col-xl-8">
 
-    <!-- Elérhetőségek -->
     <section class="kartya szakasz">
       <h2>Elérhetőségeink</h2>
 
@@ -81,7 +83,7 @@
    
 </main>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
 </body>
 </html>
